@@ -704,6 +704,7 @@ public class ApplicationMapperTest {
             .utilitiesCostMonthly(new BigDecimal("60.00"))
             .utilitiesCostYearly(new BigDecimal("720.00"))
             .utilitiesFrequencyAndCostDetails("Utilities details")
+            .rentInclusiveOfUtilityCharges(YesOrNo.YES)
             .additionalRentalServiceChargesVary(YesOrNo.YES)
             .varyingAdditionalRentalServiceChargesDetails("Service charge details")
             .build();
@@ -736,6 +737,7 @@ public class ApplicationMapperTest {
         assertThat(result.getUtilitiesCostMonthly()).isEqualTo(new BigDecimal("60.00"));
         assertThat(result.getUtilitiesCostYearly()).isEqualTo(new BigDecimal("720.00"));
         assertThat(result.getUtilitiesPaidFrequencyAndCostDetails()).isEqualTo("Utilities details");
+        assertThat(result.getRentInclusiveOfUtilityCharges()).isEqualTo(YesOrNo.YES);
         assertThat(result.getCurrentTenancyStartDate()).isEqualTo(startDate);
         assertThat(result.getCurrentTenancyEndDate()).isEqualTo(endDate);
         assertThat(result.getCurrentTenancyReplaceOriginalTenancy()).isEqualTo(YesNoNotSure.YES);
@@ -745,21 +747,52 @@ public class ApplicationMapperTest {
     }
 
     @Test
-    public void shouldReturnNullWhenTenancyDetailsIsNullForCurrentRentDetails() {
+    public void shouldMapCurrentRentDetailsWhenTenancyDetailsIsNull() {
+        MarketRentCaseEntity marketRentCase = MarketRentCaseEntity.builder()
+            .rentPaymentFrequency(Frequency.MONTHLY)
+            .rentCostMonthly(new BigDecimal("400.00"))
+            .build();
+
         PTCaseEntity ptCaseEntity = PTCaseEntity.builder()
             .tenancyDetails(Collections.emptyList())
-            .marketRentCases(List.of(MarketRentCaseEntity.builder().build()))
+            .marketRentCases(List.of(marketRentCase))
             .build();
 
         CurrentRentsDetailsDto result = ApplicationMapper.mapCurrentRentDetails(ptCaseEntity);
 
-        assertThat(result).isNull();
+        assertThat(result).isNotNull();
+        assertThat(result.getRentPaymentFrequency()).isEqualTo(Frequency.MONTHLY);
+        assertThat(result.getRentCostMonthly()).isEqualTo(new BigDecimal("400.00"));
+        assertThat(result.getTribunalPreviouslyDeterminedTenancyRent()).isNull();
+        assertThat(result.getCurrentTenancyStartDate()).isNull();
     }
 
     @Test
-    public void shouldReturnNullWhenMarketRentCaseIsNullForCurrentRentDetails() {
+    public void shouldMapCurrentRentDetailsWhenMarketRentCaseIsNull() {
+        LocalDateTime startDate = LocalDateTime.of(2025, 1, 1, 0, 0);
+        TenancyDetailsEntity tenancyDetails = TenancyDetailsEntity.builder()
+            .tribunalPreviouslyDeterminedTenancyRent(YesOrNo.YES)
+            .currentTenancyStartDate(startDate)
+            .build();
+
         PTCaseEntity ptCaseEntity = PTCaseEntity.builder()
-            .tenancyDetails(List.of(TenancyDetailsEntity.builder().build()))
+            .tenancyDetails(List.of(tenancyDetails))
+            .marketRentCases(Collections.emptyList())
+            .build();
+
+        CurrentRentsDetailsDto result = ApplicationMapper.mapCurrentRentDetails(ptCaseEntity);
+
+        assertThat(result).isNotNull();
+        assertThat(result.getTribunalPreviouslyDeterminedTenancyRent()).isEqualTo(YesOrNo.YES);
+        assertThat(result.getCurrentTenancyStartDate()).isEqualTo(startDate);
+        assertThat(result.getRentPaymentFrequency()).isNull();
+        assertThat(result.getRentCostMonthly()).isNull();
+    }
+
+    @Test
+    public void shouldReturnNullWhenNoCurrentRentEntitiesExist() {
+        PTCaseEntity ptCaseEntity = PTCaseEntity.builder()
+            .tenancyDetails(Collections.emptyList())
             .marketRentCases(Collections.emptyList())
             .build();
 
